force-app/main/default/objects/Product_Inventory__c/Product_Inventory__c.object-meta.xml
<CustomObject>
    <label>Product Inventory</label>
    <nameField>
        <displayFormat>PI-{000000}</displayFormat>
        <label>Product Inventory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>