force-app/main/default/objects/Product_Inventory__c/fields/Approving_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Approving_Order_Quantity__c</fullName>
    <label>Approving Order Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>