force-app/main/default/objects/Product_Inventory__c/fields/Checking__c.field-meta.xml
<CustomField>
    <fullName>Checking__c</fullName>
    <label>Checking</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>