force-app/main/default/objects/Product_Inventory__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Product Inventory</relationshipLabel>
    <relationshipName>Product_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>