force-app/main/default/objects/Product_Inventory__c/fields/DN_Used_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DN_Used_Quantity__c</fullName>
    <label>DN Used Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>