force-app/main/default/objects/Product_Inventory__c/fields/Inventory_Age__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Age__c</fullName>
    <label>Inventory Age</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>