force-app/main/default/objects/Product_Inventory__c/fields/Inventory_Aging__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Aging__c</fullName>
    <label>Inventory Aging</label>
    <length>255</length>
    <type>Text</type>
</CustomField>