force-app/main/default/objects/Product_Inventory__c/fields/Inventory_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Amount_USD__c</fullName>
    <formula>USD_Cost__c * Inventory_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Amount (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>