force-app/main/default/objects/Product_Inventory__c/fields/Inventory_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Quantity__c</fullName>
    <label>Inventory Quantity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>