force-app/main/default/objects/Product_Inventory__c/fields/Restricted__c.field-meta.xml
<CustomField>
    <fullName>Restricted__c</fullName>
    <label>Restricted</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>