force-app/main/default/objects/Product_Inventory__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <label>Return</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>