force-app/main/default/objects/Product_Inventory__c/fields/Sales_Unit__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit__c</fullName>
    <label>Sales Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>