force-app/main/default/objects/Product_Inventory__c/fields/Sales_Unit_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Sales_Unit_Inventory__c</fullName>
    <label>Inventory Quantity (Sales Unit)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>