force-app/main/default/objects/Product_Inventory__c/fields/Search_Key__c.field-meta.xml
<CustomField>
    <fullName>Search_Key__c</fullName>
    <description>物料号+工厂+商品名</description>
    <label>Search Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>