force-app/main/default/objects/Product_Inventory__c/fields/To_Date__c.field-meta.xml
<CustomField>
    <fullName>To_Date__c</fullName>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>