force-app/main/default/objects/Product_Inventory__c/fields/Transfer_And_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer_And_Transfer__c</fullName>
    <label>Transfer And Transfer</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>