force-app/main/default/objects/Product_Inventory__c/fields/Transport__c.field-meta.xml
<CustomField>
    <fullName>Transport__c</fullName>
    <label>Transport</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>