force-app/main/default/objects/Product_Inventory__c/fields/Transport_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Transport_Inventory__c</fullName>
    <label>Transport Inventory</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>