force-app/main/default/objects/Product_Inventory__c/fields/USD_Cost__c.field-meta.xml
<CustomField>
    <fullName>USD_Cost__c</fullName>
    <label>Unit Cost (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>