force-app/main/default/objects/Product_Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name_Text__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Batch_Number__c</columns>
    <columns>Available_Quantity__c</columns>
    <columns>DN_Used_Quantity__c</columns>
    <columns>Inventory_Quantity__c</columns>
    <columns>Inventory_Age__c</columns>
    <columns>Unit_Cost__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Code__c</field>
        <operation>equals</operation>
        <value>000000200201000810</value>
    </filters>
    <filters>
        <field>Plant__c</field>
        <operation>equals</operation>
        <value>3020</value>
    </filters>
    <label>All</label>
</ListView>